objects/OppRow__c.object
<CustomObject>
    <fields>
        <fullName>ACV_APOString__c</fullName>
        <formula>IF(  ACV_APO__c   &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(ACV_APO__c) &gt;= 1000000, TEXT(FLOOR(ABS(ACV_APO__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(ACV_APO__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(ACV_APO__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(ACV_APO__c))), 3) &amp;

IF(ACV_APO__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV APOString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_APO__c</fullName>
        <label>ACV APO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACVcalculated__c</fullName>
        <label>ACVcalculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APOAccountId__c</fullName>
        <label>APOAccountId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOAccountName__c</fullName>
        <label>APOAccountName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOOppId__c</fullName>
        <label>APOOppId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloseString__c</fullName>
        <formula>TEXT(Month( Close_Date__c )) &amp; &quot;/&quot; &amp; TEXT(DAY( Close_Date__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR( Close_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CloseString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyString__c</fullName>
        <formula>IF( Monthly__c  &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Monthly__c) &gt;= 1000000, TEXT(FLOOR(ABS(Monthly__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Monthly__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Monthly__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Monthly__c))), 3) &amp;

IF(Monthly__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MonthlyString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <label>Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opp</label>
        <referenceTo>Opp__c</referenceTo>
        <relationshipLabel>OppRows</relationshipLabel>
        <relationshipName>OppRows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <label>Owner Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedOppRow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessedOppRow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessedOpp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessedOpp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityString__c</fullName>
        <formula>IF( Quantity__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp;
IF(ABS(Quantity__c) &gt;= 1000000, TEXT(FLOOR(ABS(Quantity__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Quantity__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Quantity__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Quantity__c))), 3) &amp;

IF(Quantity__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuantityString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPriceString__c</fullName>
        <formula>IF(   Sales_Price__c    &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Sales_Price__c) &gt;= 1000000, TEXT(FLOOR(ABS(Sales_Price__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Sales_Price__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Sales_Price__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Sales_Price__c))), 3) &amp;

IF(Sales_Price__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesPriceString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalString__c</fullName>
        <formula>IF(Total__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Total__c) &gt;= 1000000, TEXT(FLOOR(ABS(Total__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Total__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Total__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Total__c))), 3) &amp; 

IF(Total__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OppRow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProcessedOpp__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>NAME</columns>
        <columns>Opp__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Product__c</columns>
        <columns>QuantityString__c</columns>
        <columns>MonthlyString__c</columns>
        <columns>TotalString__c</columns>
        <columns>Type__c</columns>
        <columns>Forecast__c</columns>
        <columns>Stage__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>APOAccountName__c</columns>
        <columns>Account_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OR-{0000}</displayFormat>
        <label>Opp Row</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OppRows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>